add slim jre build step to optimize production image size - issue 15 (#65)